--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-css": "tailwindcss build -i ./src/styles.css -o ./public/styles.css --watch"
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
