--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "postcss": "^8.4.32",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
     "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
